fix: end to end testing of event pipeline